Fix z-index of performer scrape selector and correct no options message (#1050)

--- a/ui/v2.5/src/components/Performers/styles.scss
+++ b/ui/v2.5/src/components/Performers/styles.scss
@@ -88,3 +88,7 @@
   margin-top: 10px;
   max-width: 100%;
 }
+
+#performer-scraper-popover {
+  z-index: 1;
+}
